<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".authUI.PasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/start_mobile_banking_with_umb"
            android:textColor="@color/AppTextAndFields"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:inputType="numberPassword"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_lock_24px"
            android:drawablePadding="15dp"
            android:drawableTint="@color/AppTextAndFields"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:textColorHint="@color/AppTextAndFields"
            android:theme="@style/EditText.Yellow"
            tools:targetApi="m" />


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/forgotPassword"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textColor="@color/AppTextAndFields"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:id="@+id/continueFab"
        android:layout_height="wrap_content" android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        app:backgroundTint="@color/AppTextAndFields" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>